--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,7 @@
         </activity>
         <activity android:name=".PlayActivity" android:screenOrientation="sensorPortrait" android:theme="@style/Theme.AppCompat.NoActionBar"/>
         <activity android:name=".SettingActivity" android:screenOrientation="sensorPortrait"/>
-
-        <service android:name="creepersan.videoplayer.Service.MediaPlayerService"/>
+        <activity android:name=".AboutActivity" android:screenOrientation="sensorPortrait"/>
 
     </application>
 
